# Riichi-Mahjong-Transaction-Python

./: .gitignore  CITATION.cff  Helper.py  Points.py  README.md  RiichiRound.py  RoundEnd.py  Types.py  makefile  pyproject.toml  requirements.txt  static_analyzer.py  transformer.py
src/riichi_round_calc/: helper.py  points.py  riichi_round.py  riichi_types.py  round_end.py
test/: test_riichi_round.py
tests/: test_riichi_round.py  test_round_end.py
