[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "riichi_round_calc"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    # Add runtime dependencies here
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
addopts = [
    "--import-mode=importlib",
]
# Enables the usage of setuptools_scm
[tool.setuptools_scm]